--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #F2F2FF;
+  background-color: #f2f2ff;
 }
 
 h1 {
