--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a:hover {
 }
 
 body {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -43,7 +43,7 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-h5{
+h5 {
   font-size: 1em;
 }
 button {
